tools/src/binding/lemon_binding.rs

/* automatically generated by rust-bindgen 0.71.1 */

#![allow(dead_code, non_snake_case, non_camel_case_types, non_upper_case_globals)]

pub const NO_OFFSET: i32 = -2147483647;
unsafe extern "C" {
    pub fn Symbol_init();
}
unsafe extern "C" {
    pub fn Symbol_new(arg1: *const ::std::os::raw::c_char) -> *mut symbol;
}
unsafe extern "C" {
    pub fn Symbol_count() -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn Symbol_arrayof() -> *mut *mut symbol;
}
unsafe extern "C" {
    pub fn Parse(lemp: *mut lemon);
}
unsafe extern "C" {
    pub fn ReportOutput(lemp: *mut lemon);
}
pub const Boolean_LEMON_FALSE: Boolean = 0;
pub const Boolean_LEMON_TRUE: Boolean = 1;
pub type Boolean = ::std::os::raw::c_uint;
pub const symbol_type_TERMINAL: symbol_type = 0;
pub const symbol_type_NONTERMINAL: symbol_type = 1;
pub const symbol_type_MULTITERMINAL: symbol_type = 2;
pub type symbol_type = ::std::os::raw::c_uint;
pub const e_assoc_LEFT: e_assoc = 0;
pub const e_assoc_RIGHT: e_assoc = 1;
pub const e_assoc_NONE: e_assoc = 2;
pub const e_assoc_UNK: e_assoc = 3;
pub type e_assoc = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct symbol {
    pub name: *const ::std::os::raw::c_char,
    pub index: ::std::os::raw::c_int,
    pub type_: symbol_type,
    pub rule: *mut rule,
    pub fallback: *mut symbol,
    pub prec: ::std::os::raw::c_int,
    pub assoc: e_assoc,
    pub firstset: *mut ::std::os::raw::c_char,
    pub lambda: Boolean,
    pub useCnt: ::std::os::raw::c_int,
    pub destructor: *mut ::std::os::raw::c_char,
    pub destLineno: ::std::os::raw::c_int,
    pub datatype: *mut ::std::os::raw::c_char,
    pub dtnum: ::std::os::raw::c_int,
    pub bContent: ::std::os::raw::c_int,
    pub nsubsym: ::std::os::raw::c_int,
    pub subsym: *mut *mut symbol,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of symbol"][::std::mem::size_of::<symbol>() - 104usize];
    ["Alignment of symbol"][::std::mem::align_of::<symbol>() - 8usize];
    ["Offset of field: symbol::name"][::std::mem::offset_of!(symbol, name) - 0usize];
    ["Offset of field: symbol::index"][::std::mem::offset_of!(symbol, index) - 8usize];
    ["Offset of field: symbol::type_"][::std::mem::offset_of!(symbol, type_) - 12usize];
    ["Offset of field: symbol::rule"][::std::mem::offset_of!(symbol, rule) - 16usize];
    ["Offset of field: symbol::fallback"][::std::mem::offset_of!(symbol, fallback) - 24usize];
    ["Offset of field: symbol::prec"][::std::mem::offset_of!(symbol, prec) - 32usize];
    ["Offset of field: symbol::assoc"][::std::mem::offset_of!(symbol, assoc) - 36usize];
    ["Offset of field: symbol::firstset"][::std::mem::offset_of!(symbol, firstset) - 40usize];
    ["Offset of field: symbol::lambda"][::std::mem::offset_of!(symbol, lambda) - 48usize];
    ["Offset of field: symbol::useCnt"][::std::mem::offset_of!(symbol, useCnt) - 52usize];
    ["Offset of field: symbol::destructor"][::std::mem::offset_of!(symbol, destructor) - 56usize];
    ["Offset of field: symbol::destLineno"][::std::mem::offset_of!(symbol, destLineno) - 64usize];
    ["Offset of field: symbol::datatype"][::std::mem::offset_of!(symbol, datatype) - 72usize];
    ["Offset of field: symbol::dtnum"][::std::mem::offset_of!(symbol, dtnum) - 80usize];
    ["Offset of field: symbol::bContent"][::std::mem::offset_of!(symbol, bContent) - 84usize];
    ["Offset of field: symbol::nsubsym"][::std::mem::offset_of!(symbol, nsubsym) - 88usize];
    ["Offset of field: symbol::subsym"][::std::mem::offset_of!(symbol, subsym) - 96usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rule {
    pub lhs: *mut symbol,
    pub lhsalias: *const ::std::os::raw::c_char,
    pub lhsStart: ::std::os::raw::c_int,
    pub ruleline: ::std::os::raw::c_int,
    pub nrhs: ::std::os::raw::c_int,
    pub rhs: *mut *mut symbol,
    pub rhsalias: *mut *const ::std::os::raw::c_char,
    pub line: ::std::os::raw::c_int,
    pub code: *const ::std::os::raw::c_char,
    pub codePrefix: *const ::std::os::raw::c_char,
    pub codeSuffix: *const ::std::os::raw::c_char,
    pub precsym: *mut symbol,
    pub index: ::std::os::raw::c_int,
    pub iRule: ::std::os::raw::c_int,
    pub noCode: Boolean,
    pub codeEmitted: Boolean,
    pub canReduce: Boolean,
    pub doesReduce: Boolean,
    pub neverReduce: Boolean,
    pub nextlhs: *mut rule,
    pub next: *mut rule,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of rule"][::std::mem::size_of::<rule>() - 136usize];
    ["Alignment of rule"][::std::mem::align_of::<rule>() - 8usize];
    ["Offset of field: rule::lhs"][::std::mem::offset_of!(rule, lhs) - 0usize];
    ["Offset of field: rule::lhsalias"][::std::mem::offset_of!(rule, lhsalias) - 8usize];
    ["Offset of field: rule::lhsStart"][::std::mem::offset_of!(rule, lhsStart) - 16usize];
    ["Offset of field: rule::ruleline"][::std::mem::offset_of!(rule, ruleline) - 20usize];
    ["Offset of field: rule::nrhs"][::std::mem::offset_of!(rule, nrhs) - 24usize];
    ["Offset of field: rule::rhs"][::std::mem::offset_of!(rule, rhs) - 32usize];
    ["Offset of field: rule::rhsalias"][::std::mem::offset_of!(rule, rhsalias) - 40usize];
    ["Offset of field: rule::line"][::std::mem::offset_of!(rule, line) - 48usize];
    ["Offset of field: rule::code"][::std::mem::offset_of!(rule, code) - 56usize];
    ["Offset of field: rule::codePrefix"][::std::mem::offset_of!(rule, codePrefix) - 64usize];
    ["Offset of field: rule::codeSuffix"][::std::mem::offset_of!(rule, codeSuffix) - 72usize];
    ["Offset of field: rule::precsym"][::std::mem::offset_of!(rule, precsym) - 80usize];
    ["Offset of field: rule::index"][::std::mem::offset_of!(rule, index) - 88usize];
    ["Offset of field: rule::iRule"][::std::mem::offset_of!(rule, iRule) - 92usize];
    ["Offset of field: rule::noCode"][::std::mem::offset_of!(rule, noCode) - 96usize];
    ["Offset of field: rule::codeEmitted"][::std::mem::offset_of!(rule, codeEmitted) - 100usize];
    ["Offset of field: rule::canReduce"][::std::mem::offset_of!(rule, canReduce) - 104usize];
    ["Offset of field: rule::doesReduce"][::std::mem::offset_of!(rule, doesReduce) - 108usize];
    ["Offset of field: rule::neverReduce"][::std::mem::offset_of!(rule, neverReduce) - 112usize];
    ["Offset of field: rule::nextlhs"][::std::mem::offset_of!(rule, nextlhs) - 120usize];
    ["Offset of field: rule::next"][::std::mem::offset_of!(rule, next) - 128usize];
};
pub const cfgstatus_COMPLETE: cfgstatus = 0;
pub const cfgstatus_INCOMPLETE: cfgstatus = 1;
pub type cfgstatus = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct config {
    pub rp: *mut rule,
    pub dot: ::std::os::raw::c_int,
    pub fws: *mut ::std::os::raw::c_char,
    pub fplp: *mut plink,
    pub bplp: *mut plink,
    pub stp: *mut state,
    pub status: cfgstatus,
    pub next: *mut config,
    pub bp: *mut config,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of config"][::std::mem::size_of::<config>() - 72usize];
    ["Alignment of config"][::std::mem::align_of::<config>() - 8usize];
    ["Offset of field: config::rp"][::std::mem::offset_of!(config, rp) - 0usize];
    ["Offset of field: config::dot"][::std::mem::offset_of!(config, dot) - 8usize];
    ["Offset of field: config::fws"][::std::mem::offset_of!(config, fws) - 16usize];
    ["Offset of field: config::fplp"][::std::mem::offset_of!(config, fplp) - 24usize];
    ["Offset of field: config::bplp"][::std::mem::offset_of!(config, bplp) - 32usize];
    ["Offset of field: config::stp"][::std::mem::offset_of!(config, stp) - 40usize];
    ["Offset of field: config::status"][::std::mem::offset_of!(config, status) - 48usize];
    ["Offset of field: config::next"][::std::mem::offset_of!(config, next) - 56usize];
    ["Offset of field: config::bp"][::std::mem::offset_of!(config, bp) - 64usize];
};
pub const e_action_SHIFT: e_action = 0;
pub const e_action_ACCEPT: e_action = 1;
pub const e_action_REDUCE: e_action = 2;
pub const e_action_ERROR: e_action = 3;
pub const e_action_SSCONFLICT: e_action = 4;
pub const e_action_SRCONFLICT: e_action = 5;
pub const e_action_RRCONFLICT: e_action = 6;
pub const e_action_SH_RESOLVED: e_action = 7;
pub const e_action_RD_RESOLVED: e_action = 8;
pub const e_action_NOT_USED: e_action = 9;
pub const e_action_SHIFTREDUCE: e_action = 10;
pub type e_action = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct action {
    pub sp: *mut symbol,
    pub type_: e_action,
    pub x: action__bindgen_ty_1,
    pub spOpt: *mut symbol,
    pub next: *mut action,
    pub collide: *mut action,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union action__bindgen_ty_1 {
    pub stp: *mut state,
    pub rp: *mut rule,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of action__bindgen_ty_1"][::std::mem::size_of::<action__bindgen_ty_1>() - 8usize];
    ["Alignment of action__bindgen_ty_1"][::std::mem::align_of::<action__bindgen_ty_1>() - 8usize];
    ["Offset of field: action__bindgen_ty_1::stp"]
        [::std::mem::offset_of!(action__bindgen_ty_1, stp) - 0usize];
    ["Offset of field: action__bindgen_ty_1::rp"]
        [::std::mem::offset_of!(action__bindgen_ty_1, rp) - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of action"][::std::mem::size_of::<action>() - 48usize];
    ["Alignment of action"][::std::mem::align_of::<action>() - 8usize];
    ["Offset of field: action::sp"][::std::mem::offset_of!(action, sp) - 0usize];
    ["Offset of field: action::type_"][::std::mem::offset_of!(action, type_) - 8usize];
    ["Offset of field: action::x"][::std::mem::offset_of!(action, x) - 16usize];
    ["Offset of field: action::spOpt"][::std::mem::offset_of!(action, spOpt) - 24usize];
    ["Offset of field: action::next"][::std::mem::offset_of!(action, next) - 32usize];
    ["Offset of field: action::collide"][::std::mem::offset_of!(action, collide) - 40usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct state {
    pub bp: *mut config,
    pub cfp: *mut config,
    pub statenum: ::std::os::raw::c_int,
    pub ap: *mut action,
    pub nTknAct: ::std::os::raw::c_int,
    pub nNtAct: ::std::os::raw::c_int,
    pub iTknOfst: ::std::os::raw::c_int,
    pub iNtOfst: ::std::os::raw::c_int,
    pub iDfltReduce: ::std::os::raw::c_int,
    pub pDfltReduce: *mut rule,
    pub autoReduce: ::std::os::raw::c_int,
}
